Fix tooltip z-index

--- a/src/popups/tooltip/tooltip.css
+++ b/src/popups/tooltip/tooltip.css
@@ -14,4 +14,5 @@
   border-radius: 4px;
   background-color: #616161;
   pointer-events: none;
+  z-index: 1500;
 }
